# cmake

./: .gitmodules  README.md
test/: CMakeLists.txt  CMakeSettings.json  main.cpp
test/Adder/: Adder.cpp  Adder.h  CMakeLists.txt
test1/: CMakeLists.txt  CMakeUserPresets.json
test1/test1/: CMakeLists.txt  test1.cpp  test1.h
test10/: CMakeLists.txt
test10/app/: CMakeLists.txt
test10/app/app1/: CMakeLists.txt  app1.cpp
test10/app/app2/: CMakeLists.txt  app2.h
test10/app/app3/: CMakeLists.txt  app3.cpp
test10/app/app4/: CMakeLists.txt  app4.cpp  app4.h
test10/lib/: static_library.lib
test10/main/: CMakeLists.txt  main.cpp
test10/public/: CMakeLists.txt
test10/public/public1/: CMakeLists.txt  public1.cpp  public1.h
test10/public/public2/: CMakeLists.txt  public2.h
test10/public/public3/: CMakeLists.txt
test11/: CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
test11/config/: config.xml
test11/src/: CMakeLists.txt  main.cpp
test11/src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
test11/src/XMLPraser/: CMakeLists.txt  Node.h  XMLPraser.cpp  XMLPraser.h
test12/: CMakeLists.txt
test12/app/: CMakeLists.txt
test12/app/app4/: CMakeLists.txt  app4.cpp
test12/public/: CMakeLists.txt
test12/public/public3/: public3.h
test12/public/public4/: CMakeLists.txt  public4.h
test13/: main.cpp  test13.cpp  test13.h  test13.qrc  test13.sln  test13.ui  test13.vcxproj  test13.vcxproj.filters
test14/: CMakeLists.txt
test14/main/: CMakeLists.txt
test14/tests/: CMakeLists.txt  hello_test.cpp
test2/: CMakeLists.txt  testMultiDir.cpp
test2/dirA/: CMakeLists.txt  dirA.cpp  dirA.h
test2/dirB/: CMakeLists.txt  dirB.cpp  dirB.h
test2/dirB/dirC/: CMakeLists.txt  dirC1.cpp  dirC1.h  dirC2.cpp  dirC2.h
test3/: CMakeLists.txt
test3/src/: main.cpp  static.cpp
test4/: CMakeLists.txt
test5/: CMakeLists.txt
test5/include/: Hello.h
test5/src/: Hello.cpp  main.cpp
test6/: CMakeLists.txt  test6.cpp
test7/: CMakeLists.txt  CMakeUserPresets.json  test7.cpp  vcpkg.json
test8/: CMakeLists.txt
test8/app/app1/: app1.h
test8/app/app2/: app2.cpp
test8/app/app3/: CMakeLists.txt  app3.h
test8/include/: static.h
test8/main/: CMakeLists.txt  main.cpp
test8/public/: CMakeLists.txt
test8/public/public2/: public2.cpp
test9/: CMakeLists.txt
